@@ -1,10 +1,6 @@
 package seedu.docit.storage;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
@@ -17,7 +13,6 @@ import seedu.docit.model.patient.MedicalHistory;
 import seedu.docit.model.patient.Name;
 import seedu.docit.model.patient.Patient;
 import seedu.docit.model.patient.Phone;
-import seedu.docit.model.tag.Tag;
 
 /**
  * Jackson-friendly version of {@link Patient}.
@@ -30,8 +25,7 @@ public class JsonAdaptedPatient {
     private final String phone;
     private final String email;
     private final String address;
-    private final List<JsonAdaptedTag> tagged = new ArrayList<>();
-    private final String medicalHistory;
+    private final List<JsonAdaptedMedicalEntry> medicalHistory;
 
     /**
      * Constructs a {@code JsonAdaptedPatient} with the given patient details.
@@ -39,16 +33,12 @@ public class JsonAdaptedPatient {
     @JsonCreator
     public JsonAdaptedPatient(@JsonProperty("name") String name, @JsonProperty("phone") String phone,
                               @JsonProperty("email") String email, @JsonProperty("docit") String address,
-                              @JsonProperty("tagged") List<JsonAdaptedTag> tagged,
-                              @JsonProperty("medicalHistory") String medical) {
+                              @JsonProperty("medicalHistory") List<JsonAdaptedMedicalEntry> medicalHistory) {
         this.name = name;
         this.phone = phone;
         this.email = email;
         this.address = address;
-        if (tagged != null) {
-            this.tagged.addAll(tagged);
-        }
-        this.medicalHistory = medical;
+        this.medicalHistory = medicalHistory;
 
     }
 
@@ -60,10 +50,12 @@ public class JsonAdaptedPatient {
         phone = source.getPhone().value;
         email = source.getEmail().value;
         address = source.getAddress().value;
-//        tagged.addAll(source.getTags().stream()
-//                .map(JsonAdaptedTag::new)
-//                .collect(Collectors.toList()));
-        medicalHistory = source.getMedicalHistory().toString();
+        medicalHistory = source.getMedicalHistory()
+                            .toList()
+                            .stream()
+                            .filter(x -> x != null)
+                            .map(x -> new JsonAdaptedMedicalEntry(x.getDescription(), x.getDateString()))
+                            .collect(Collectors.toList());
     }
 
     /**
@@ -72,11 +64,6 @@ public class JsonAdaptedPatient {
      * @throws IllegalValueException if there were any data constraints violated in the adapted patient.
      */
     public Patient toModelType() throws IllegalValueException {
-//        final List<Tag> patientTags = new ArrayList<>();
-//        for (JsonAdaptedTag tag : tagged) {
-//            patientTags.add(tag.toModelType());
-//        }
-
         if (name == null) {
             throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT, Name.class.getSimpleName()));
         }
@@ -109,58 +96,16 @@ public class JsonAdaptedPatient {
         }
         final Address modelAddress = new Address(address);
 
-//        final Set<Tag> modelTags = new HashSet<>(patientTags);
+        MedicalHistory modelMedicalHistory = MedicalHistory.generate();
 
-        Object[] detailedEntries = readMedicalHistory(medicalHistory);
-
-        MedicalHistory modelMedicalHistory = new MedicalHistory("");
-
-        if (detailedEntries.length > 0) { // has at least one medical entry
-            modelMedicalHistory.delete(0);
-
-            for (int i = 0; i < detailedEntries.length; i++) {
-                @SuppressWarnings("unchecked")
-                String[] entry = (String[]) detailedEntries[i];
-
-                if (entry.length == 1) { // no date
-                    if (!isValidMh(entry[0])) {
-                        modelMedicalHistory = MedicalHistory.EMPTY_MEDICAL_HISTORY;
-                    } else {
-                        if (modelMedicalHistory.isEmpty()) {
-                            modelMedicalHistory = new MedicalHistory(entry[0].trim());
-                        } else {
-                            modelMedicalHistory.add(entry[0].trim());
-                        }
-
-                    }
-                } else {
-                    if (!isValidMh(entry[1])) {
-                        modelMedicalHistory = MedicalHistory.EMPTY_MEDICAL_HISTORY;
-                    } else {
-                        if (modelMedicalHistory.isEmpty()) {
-                            modelMedicalHistory = new MedicalHistory("");
-                            modelMedicalHistory.delete(0);
-                            modelMedicalHistory.add(entry[1].trim(), entry[0].trim());
-                        } else {
-                            modelMedicalHistory.add(entry[1].trim(), entry[0].trim());
-                        }
-                    }
-                }
-            }
+        for (JsonAdaptedMedicalEntry medicalEntry: medicalHistory) {
+            modelMedicalHistory.add(medicalEntry.getDescription(), medicalEntry.getDateString());
+        }
+        if (medicalHistory.size() == 0) {
+            modelMedicalHistory = MedicalHistory.EMPTY_MEDICAL_HISTORY;
         }
 
-//        return new Patient(modelName, modelPhone, modelEmail, modelAddress, modelTags, modelMedicalHistory);
         return new Patient(modelName, modelPhone, modelEmail, modelAddress, modelMedicalHistory);
-    }
-
-    private static Object[] readMedicalHistory(String medicalHistory) {
-        String[] entries = medicalHistory.split(", ");
-        Object[] entriesDateDesc = Arrays.stream(entries).map(x -> x.split("\\| ")).toArray();
-        return entriesDateDesc;
-    }
-
-    private static boolean isValidMh(String entry) {
-        return !(entry.length() == 0 || entry == " " || entry == null);
     }
 
 }
